--- a/index.html
+++ b/index.html
@@ -29,10 +29,43 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+  
+  <style>
+    img {
+      border-radius: 16px;
+      height: auto;
+      width: 30%;
+    }
+    body {
+      background-color: #1A1A1A;
+      text-align: center;
+      color: #FFFFFF;
+      padding: 10px;
+          }
+
+    .container {
+       background-color: #333333;
+       border-radius: 16px; 
+    }      
+  </style>
+  
   </head>
   <body>
 
-<h1> Connexxa </h1>
+<header>
+<img src="https://cdn.glitch.com/aa4dd014-1f59-41be-a5ec-9c537429809e%2FWhatsApp%20Image%202020-12-05%20at%2001.04.05.jpeg?v=1607132407953">
+</header> 
+<br>
+<div class="container">
+
+  <br>
+
+<h2> Testing </h2>
+
+<p> Phone call: +1 615-270-3081 </p>
+<br>
+
+</div>
 
 
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
