--- a/index.html
+++ b/index.html
@@ -1,81 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- add shortcut icon -->
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://cdn.glitch.com/aa4dd014-1f59-41be-a5ec-9c537429809e%2FWhatsApp_Image_2020-12-05_at_01.04.05-removebg-preview.ico?v=1607132466944"
-      sizes="16x16"
-    />
-    <!-- add font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Cookie"
-      rel="stylesheet"
-    />
-    <!--add javascript-->
 
-    <script async src="./index.js"></script>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- add shortcut icon -->
+	<link rel="shortcut icon" type="image/x-icon"
+		href="https://cdn.glitch.com/aa4dd014-1f59-41be-a5ec-9c537429809e%2FWhatsApp_Image_2020-12-05_at_01.04.05-removebg-preview.ico?v=1607132466944"
+		sizes="16x16" />
+	<!-- add font -->
+	<link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" />
+	<!--add javascript-->
 
-    <title>Connexxa</title>
-    <!-- link for icons -->
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+	<script async src="./index.js"></script>
 
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+	<title>Connexxa</title>
+	<!-- link for icons -->
+	<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  
-  <style>
-    img {
-      border-radius: 16px;
-      height: auto;
-      width: 30%;
-    }
-    body {
-      background-color: #1A1A1A;
-      text-align: center;
-      color: #FFFFFF;
-      padding: 10px;
-          }
+	<!-- import the webpage's stylesheet -->
+	<link rel="stylesheet" href="/style.css" />
 
-    .container {
-       background-color: #333333;
-       border-radius: 16px; 
-    }      
-  </style>
-  
-  </head>
-  <body>
+	<!-- import the webpage's javascript file -->
+	<script src="/script.js" defer></script>
 
-<header>
-<img src="https://cdn.glitch.com/aa4dd014-1f59-41be-a5ec-9c537429809e%2FWhatsApp%20Image%202020-12-05%20at%2001.04.05.jpeg?v=1607132407953">
-</header> 
-<br>
-<div class="container">
+	<style>
+		img {
+			border-radius: 16px;
+			height: auto;
+			width: 30%;
+		}
 
-  <br>
+		body {
+			background-color: #1A1A1A;
+			text-align: center;
+			color: #FFFFFF;
+			padding: 10px;
+		}
 
-<h2> Testing </h2>
+		.container {
+			background-color: #333333;
+			border-radius: 16px;
+		}
+	</style>
 
-<p> Phone call: +1 615-270-3081 </p>
-<br>
+</head>
 
-</div>
+<body>
+
+	<header>
+		<img src="https://cdn.glitch.com/aa4dd014-1f59-41be-a5ec-9c537429809e%2FWhatsApp%20Image%202020-12-05%20at%2001.04.05.jpeg?v=1607132407953">
+</header>
+		<br>
+		<div class="container">
+
+			<br>
+
+			<h1> Testing </h1>
+
+			<h3> Phone call: +1 615-270-3081 </h3>
+
+			<h3> Text: +44 7723 499643 </ph3>
+
+      <br>
+      <br>
+		</div>
 
 
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="ConnexxaBot"
-  agent-id="4ccc6609-4ac9-4a9e-a6b5-471b01636f6c"
-  language-code="en"
-></df-messenger>
+		<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+		<df-messenger intent="WELCOME" chat-title="ConnexxaBot" agent-id="4ccc6609-4ac9-4a9e-a6b5-471b01636f6c"
+			language-code="en"></df-messenger>
 
-    
-  </body>
+
+</body>
+
 </html>
